# MyGithub

./: README.md
Android/: ReadMe.txt
Android/Applications/HappyBirthday/app/src/main/: AndroidManifest.xml
Android/Applications/Hello_World/: local.properties
Android/Applications/Hello_World/Applications/JustJava/: local.properties
Android/Applications/Hello_World/app/: build.gradle  proguard-rules.pro
Android/Applications/Hello_World/app/src/main/res/values/: strings.xml
Android/Applications/JustJava/app/src/main/res/layout/: activity_main.xml
Android_Development/HappyBirthday/app/: build.gradle
Android_Development/HappyBirthday/app/src/androidTest/java/com/example/donalglavin/happybirthday/: ExampleInstrumentedTest.java
Android_Development/HappyBirthday/app/src/main/java/com/example/donalglavin/happybirthday/: MainActivity.java
Android_Development/app/src/androidTest/java/com/example/donalglavin/helloworld/: ExampleInstrumentedTest.java
Android_Development/app/src/main/: AndroidManifest.xml
Android_Development/app/src/main/java/com/example/donalglavin/helloworld/: HelloWorld.java
Android_Development/app/src/main/res/layout/: activity_hello_world.xml
Android_Development/app/src/test/java/com/example/donalglavin/helloworld/: ExampleUnitTest.java
CmakePrograms/: README.md
CmakePrograms/BitMap_Test/: CMakeLists.txt
CmakePrograms/BitMap_Test/src/: bitmap_test_main.c
CmakePrograms/GPS_AreaCalculator/: CMakeLists.txt
CmakePrograms/GPS_AreaCalculator/Resources/: DATA1.csv  kay road bc.txt  test.csv
CmakePrograms/GPS_AreaCalculator/src/: main.cpp
CmakePrograms/GPS_AreaCalculator/src/includes/: CSVdata.cpp  CSVdata.h
CmakePrograms/Hex_to_Binary_and_Decial/: CMakeLists.txt
CmakePrograms/Hex_to_Binary_and_Decial/src/: hex_file_convert.c
CmakePrograms/MyfunctionTests/: CMakeLists.txt
CmakePrograms/MyfunctionTests/src/: CMakeCache.txt  Makefile  MatrixTest  cmake_install.cmake  main.c
CmakePrograms/OpenCL_programs/Hello_Wold_OpenCL/: CMakeLists.txt
CmakePrograms/OpenCL_programs/Hello_Wold_OpenCL/src/: hello.c
CmakePrograms/OpenCL_programs/Part2_example/: CMakeLists.txt
CmakePrograms/OpenCL_programs/Part2_example/src/: cll.cpp  cll.h  main.cpp  part2.cpp  util.cpp  util.h
CmakePrograms/OpenMP_programms/Determine_PI/: CMakeLists.txt
CmakePrograms/OpenMP_programms/Determine_PI/src/: pi_calc.c
CmakePrograms/OpenMP_programms/Determine_PI2/: CMakeLists.txt
CmakePrograms/OpenMP_programms/Determine_PI2/src/: pi_calc2.c
CmakePrograms/OpenMP_programms/Hello_World/: CMakeLists.txt
CmakePrograms/OpenMP_programms/Hello_World/src/: Hello_MP.c
CmakePrograms/timer_test_c/: a.out  timer_test.c  timer_test.s
GTKprograms/Button_Test/src/: gtk_button_test.c
GTKprograms/DisplayingBitMapFromMyLib/: CMakeLists.txt
GTKprograms/DisplayingBitMapFromMyLib/src/: DispBitMap.c
GTKprograms/GTK_Hello_World/: CMakeLists.txt
GTKprograms/GTK_Hello_World/src/: gtk_hello_world.c
GTKprograms/GTK_LABEL_TEST/: CMakeLists.txt
GTKprograms/GTK_LABEL_TEST/src/: gtk_label_test.c
GTKprograms/GTK_application_test/src/: GTKapplicationTest.c
GTKprograms/HeatEquationApplication/: CMakeLists.txt
GTKprograms/HeatEquationApplication/src/: HeatEquationApp.c
GTKprograms/example_calculator/: CMakeCache.txt  CMakeLists.txt  Calculator.c  Makefile  cmake_install.cmake  temp  temp.c
GTKprograms/example_calculator/temp.app/Contents/MacOS/: temp
HappyBirthday/app/src/main/res/layout/: activity_main.xml
JustJava/app/src/main/java/com/example/android/justjava/: MainActivity.java
MyLibraryFunctions/C/bitmap_def/: bitmap.c  bitmap.h
MyLibraryFunctions/C/cameraMod_def/: cameraMod.h
MyLibraryFunctions/C/matrix_def/: matrix_def.c  matrix_def.h
MyLibraryFunctions/C/simu_def/: simu.h
QTprograms/CountDown_Timer/: CountDownTimer.dmg  CountDown_Timer.pro  Makefile  countdown_timer.cpp  countdown_timer.h  countdown_timer.ui  main.cpp  moc_countdown_timer.cpp  ui_countdown_timer.h
QTprograms/GEO_Map/: GEO_Map.pro  mainwindow.cpp  mainwindow.h
QTprograms/GeoBuddy/: GeoBuddy.pro  file_handler.cpp  file_handler.h  file_handler.ui  main.cpp  plot_and_display_handler.cpp  plot_and_display_handler.h  processing.h
QTprograms/ImgProcessingApp/ImgProcessingApp/: ImgProcessingApp.pro  displaywidget.cpp  displaywidget.h  imageviewer.cpp  imageviewer.h  imgprocessor.cpp  imgprocessor.h  mainwindow.cpp  mainwindow.h  webcam.cpp  webcam.h
QTprograms/ImgProcessingApp/build-ImgProcessingApp-Desktop_Qt_5_7_0_clang_64bit-Debug/: Makefile  moc_displaywidget.cpp  moc_imageviewer.cpp  moc_imgprocessor.cpp  moc_mainwindow.cpp  moc_webcam.cpp
QTprograms/ImgProcessingApp/build-ImgProcessingApp-Desktop_Qt_5_7_0_clang_64bit-Debug/ImgProcessingApp.app/Contents/: Info.plist
QTprograms/ImgProcessingApp/build-ImgProcessingApp-Desktop_Qt_5_7_0_clang_64bit-Debug/ImgProcessingApp.app/Contents/MacOS/: ImgProcessingApp
QTprograms/Notepad/: Notepad.pro  main.cpp  notepad.cpp  notepad.h  notepad.ui
QTprograms/Notepad/Resource/: images.qrc
QTprograms/build-GEO_Map-Desktop_Qt_5_7_0_clang_64bit-Debug/: Makefile
QTprograms/build-GEO_Map-Desktop_Qt_5_7_0_clang_64bit-Debug/GEO_Map.app/Contents/: Info.plist
QTprograms/build-GeoBuddy-Desktop_Qt_5_7_0_clang_64bit-Debug/: Makefile  moc_file_handler.cpp  moc_mainwindow.cpp  ui_file_handler.h
QTprograms/build-GeoBuddy-Desktop_Qt_5_7_0_clang_64bit-Debug/GeoBuddy.app/Contents/: Info.plist
QTprograms/build-GeoBuddy-Desktop_Qt_5_7_0_clang_64bit-Debug/GeoBuddy.app/Contents/MacOS/: GeoBuddy
QTprograms/build-Notepad-Desktop_Qt_5_7_0_clang_64bit-Debug/: Makefile  moc_notepad.cpp  qrc_images.cpp  ui_notepad.h
QTprograms/build-Notepad-Desktop_Qt_5_7_0_clang_64bit-Debug/Notepad.app/Contents/: Info.plist
QTprograms/build-Notepad-Desktop_Qt_5_7_0_clang_64bit-Debug/Notepad.app/Contents/MacOS/: Notepad
QTprograms/build-opencv-Desktop_Qt_5_7_0_clang_64bit-Debug/: Makefile
QTprograms/face-detector-gui/: README.md  faceDetector.h  main.cpp  opencv.pro
QTprograms/face-detector-gui/opencv.app/Contents/: Info.plist
(+2 files in other folders)
